lib/libremidi/tests/corpus/Invalid/No Header Chunk/afuera.mid
vti_encoding:SR|utf8-nl
vti_timelastmodified:TR|22 Oct 1999 23:58:44 -0000
vti_extenderversion:SR|4.0.2.3712
